--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,8 @@
 
     <h2>所有災害地點</h2>
     <ul>
-        {% for location in map_list %}
-     <li>Latitude: {{ location[0] }}, Longitude: {{ location[1] }}</li>
+        {% for location in chinese_address_list %}
+     <li>{{ location }}</li>
         {% endfor %}
     </ul>
 </body>
