--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>Find Nearest Disaster Location</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" type="text/css" href="templates/style.css" />
+    <script type="module" src="templates/map.js"></script>
 </head>
 <body>
     <h1>輸入現在位置</h1>
@@ -28,5 +32,15 @@
      <li>{{ location }}</li>
         {% endfor %}
     </ul>
+
+    <h3>My Google Maps Demo</h3>
+    <!--The div element for the map -->
+    <div id="map"></div>
+
+    <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,
+            b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,
+            u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
+            ({key: "AIzaSyDcI0vxTU33OBI8IlG5UUjeOtEvbg9Fh2g", v: "beta"});</script>
+
 </body>
 </html>
