--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Find Nearest Disaster Location</title>
+    <title>救護車輔助系統</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -41,7 +41,7 @@
         {% endfor %}
     </ul>
 
-    <h3>My Google Maps Demo</h3>
+    <h3>Google 地圖</h3>
     <div class="container">
         <div class="row">
           <div class="col">
@@ -59,22 +59,56 @@
 
     function initMap() {
       // Set the default location (Taipei City Hall Theater)
-      const location = { lat: 25.0374865, lng: 121.5647688 };
-
+      //const location = { lat: 25.0374865, lng: 121.5647688 };
+      const center = { lat: 25.0374865, lng: 121.5647688 };
       // Create the map
       map = new google.maps.Map(document.getElementById('map'), {
-        center: location,
-        zoom: 16,
+        center: center,
+        zoom: 15,
         mapTypeId: 'terrain'
       });
 
-      
+      locations = [
+      {
+        position: { lat: 25.0397146, lng: 121.5653771 },
+        map: map,
+        title: "location 1"
+      },
+      {
+        position: { lat: 25.0405919, lng: 121.5647644 },
+        map: map,
+        title: "location 2"
+      },
+      {
+        position: { lat: 25.039982, lng: 121.572258 },
+        map: map,
+        title: "location 3"
+      },
+      {
+        position: { lat: 25.0336076, lng: 121.5647587 },
+        map: map,
+        title: "location 4"
+      },
+      {
+        position: { lat: 25.033263, lng: 121.560492 },
+        map: map,
+        title: "location 5"
+      },
+      {
+        position: { lat: 25.0400306, lng: 121.5602452 },
+        map: map,
+        title: "location 6"
+      }
+      ]
 
       // Place a marker
-      const marker = new google.maps.Marker({
+      for (var i= 0; locations.length >i ; i++) {
+        marker = new google.maps.Marker(locations[i]);
+      }
+      /*const marker = new google.maps.Marker({
         position: location,
         map: map
-      });
+      });*/
     }
   </script>
 
